left align fix
unintentionally affected header and header components with left alignment, now only affects container items

--- a/port/src/css/App.css
+++ b/port/src/css/App.css
@@ -250,6 +250,9 @@ a span{
 @media (max-width: 40em){
   .Container,.App-header, .App-header-compressed, .App-header-expanded{
     width: 100%;
+  }
+
+  .Container{
     text-align: left;
   }
 
